# Snake-Cplusplus-University-Project

./: Apple.cpp  Apple.h  CMakeLists.txt  Constants.h  Direction.h  README.md  Snake.cpp  Snake.h  Window.cpp  Window.h  main.cpp
include/: Apple.h  Constants.h  Direction.h  Snake.h  Window.h
src/: Apple.cpp  Snake.cpp  Window.cpp  main.cpp
